# hello-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml
data/: LEARNING_GUIDE.txt  Words.txt  data_matplotlib.csv  transactions.csv
data/generator/: generate_dataset_matplotlib.py
src/: hello-matplotlib.py  hello_pandas.py  ml-hello-world.ipynb  pandas_dataframe_ops.py  python.py  special_methods.py
